@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.3</version>
+        <version>3.1.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>online.dbaltor</groupId>
@@ -14,8 +14,10 @@
     <name>banking-demo-api</name>
     <description>Demo API by Denis Baltor</description>
     <properties>
-        <java.version>17</java.version>
+        <java.version>21</java.version>
         <maven.test.plugins>3.1.2</maven.test.plugins>
+        <!-- JDK21 Dynamic loading of agent: https://github.com/mockito/mockito/issues/3037 -->
+        <argLine>-XX:+EnableDynamicAgentLoading</argLine>
         <cucumber.version>7.11.2</cucumber.version>
     </properties>
 
